fixing layout bugs

--- a/_sass/skins/_orange.scss
+++ b/_sass/skins/_orange.scss
@@ -1,33 +1,33 @@
 ///
-// Skin: Orange
+// Skin: Default
 // Author: Tian Qi
 // Email: kitian616@outlook.com
 ///
 
 // main colors
-$main-color-1:     #f92651;
+$main-color-1:     #8a0406;
 $text-color-1:     #fff;
 
-$main-color-2:     #fdb824;
+$main-color-2:     #a63311;
 $text-color-2:     #fff;
 
-$main-color-3:     #ff8a64;
-$text-color-3:     #fff;
+$main-color-3:     #fcfafa;
+$text-color-3:     #333;
 
 $main-color-theme-light: rgba(#000, .9);
 $main-color-theme-dark:  rgba(#fff, .9);
 
 // page background
-$background-color: #fffdfa;
+$background-color: #fff;
 
 // text colors
-$text-color-theme-light-d: rgba(#000, .95);
-$text-color-theme-light:   rgba(#000, .85);
-$text-color-theme-light-l: rgba(#000, .5);
+$text-color-theme-light-d: #000;
+$text-color-theme-light:   #222;
+$text-color-theme-light-l: #888;
 
-$text-color-theme-dark-d:  rgba(#fff, .95);
-$text-color-theme-dark:    rgba(#fff, .85);
-$text-color-theme-dark-l:  rgba(#fff, .65);
+$text-color-theme-dark-d:  #fff;
+$text-color-theme-dark:    rgba(#fff, .95);
+$text-color-theme-dark-l:  rgba(#fff, .85);
 
 $text-color-d:     $text-color-theme-light-d;
 $text-color:       $text-color-theme-light;
@@ -37,17 +37,17 @@ $text-background-color: rgba(#000, .05);
 
 // header and footer colors
 $header-text-color: $text-color-3;
-$header-background: linear-gradient(60deg, #ffa650 0%, #ff7b50 100%);
+$header-background: $main-color-3;
 
 $footer-text-color: $text-color-3;
-$footer-background: linear-gradient(60deg, #ffa650 0%, #ff7b50 100%);
+$footer-background: $main-color-3;
 
 // border and shadow colors
-$border-color:     mix($main-color-1, $background-color, 50%);
+$border-color:     mix(#000, $background-color, 20%);
 $border-color-l:   mix(#000, $background-color, 10%);
 $decorate-color:   rgba(#000, .1);
 $mask-color:       rgba(#000, .9);
-$select-color:     rgba($main-color-3, .5);
+$select-color:     rgba($main-color-1, .5);
 
 // function colors
 $green:           #52c41a;
